segundo commit cambiando asset

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid bg-success">
-          <a class="navbar-brand" href="#"> <img src="/asset/imgs/logo-white.png" alt="logo" width="50" height="50" class="d-inline-block align-text-top"></a>
+          <a class="navbar-brand" href="#"> <img src="./asset/imgs/logo-white.png" alt="logo" width="50" height="50" class="d-inline-block align-text-top"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -204,7 +204,7 @@
                 
             </div> 
             <div class="bg-white text-center pt-4">
-                <img src="/asset/imgs/logo-black.png" alt="logo" width="50" height="50"> 
+                <img src="./asset/imgs/logo-black.png" alt="logo" width="50" height="50"> 
                 <h6>@2022 Cuppon Discos Gran Rah Todos los derechos reservados</h6>
             </div>
         </div>
