--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" >
-                <img src="/asset/imgs/imagen2.jpg" class="d-block" alt="imagen2">
+                <img src="./asset/imgs/imagen2.jpg" class="d-block" alt="imagen2">
               </div>
               <div class="carousel-item">
-                <img src="/asset/imgs/imagen4.jpg" class="d-block" alt="imagen4">
+                <img src="./asset/imgs/imagen4.jpg" class="d-block" alt="imagen4">
               </div>
               <div class="carousel-item">
-                <img src="/asset/imgs/imagen6.jpg" class="d-block" alt="imagen6">
+                <img src="./asset/imgs/imagen6.jpg" class="d-block" alt="imagen6">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
